[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3" 
tokio = { version = "1.1", features = ["full"] } 
tokio-stream = "0.1"
futures-util = "0.3" 
log = "0.4" 
pretty_env_logger = "0.4" 
glam = { version = "0.14", features = ["scalar-math","serde"] } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
